Fixed overlapping edit/delete actions in paginated resource lists. Also fixed a bug where HTTPRoutes that are accepted are in an Unknown status

--- a/src/components/kuadrant.css
+++ b/src/components/kuadrant.css
@@ -154,3 +154,8 @@
 .kuadrant-policy-list-body .co-m-pane__body {
   padding: 0;
 }
+
+.kuadrant-pagination-left {
+  display: flex;
+  justify-content: flex-start;
+}
